--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "axios": "^1.12.2",
     "expo": "~54.0.10",
